--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/leaflet": "^1.9.20",
     "@types/react-router-dom": "^5.3.3",
     "@uploadthing/react": "^7.3.3",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13",
     "uploadthing": "^7.7.4"
