Corrección Redirección Enlaces - Error de Routing Solucionado
 PROBLEMA ANTERIOR:
- Enlaces /receive/* redirigían al dashboard en lugar de página de recepción
- Usaba process.env.VERCEL_URL que puede estar vacío o incorrecto
- Routing del SPA no funcionaba correctamente

 SOLUCIONES IMPLEMENTADAS:

1.  REDIRECCIÓN CORREGIDA EN api/receive/[fileId].js:
   - Eliminado uso de process.env.VERCEL_URL
   - Ahora usa headers del request actual (x-forwarded-proto, host)
   - URL construida dinámicamente: ${protocol}://System.Management.Automation.Internal.Host.InternalHost/#/receive/
   - Agregado logging detallado para debugging

2.  VERCEL.JSON OPTIMIZADO:
   - Simplificado rewrite para SPA: /((?!api/).*)  /index.html
   - Mantiene prioridad para /receive/*  /api/receive/*
   - Headers específicos para rutas públicas funcionando

3.  LOGGING MEJORADO:
   - Console logs para rastrear redirección
   - Debugging de URL construida
   - Verificación de protocolo y host

 RESULTADO ESPERADO:
-  Enlaces únicos redirigen correctamente a página de recepción
-  No más redirección al dashboard
-  Hash routing (/#/) funcionando en producción
-  Página muestra 'Cargando Archivo' correctamente

 PARA PROBAR:
1. Abrir enlace: https://tu-dominio.vercel.app/receive/ID_DEL_ARCHIVO
2. Debe mostrar página de recepción (no dashboard)
3. Debe aparecer indicador de ubicación
4. Geolocalización debe funcionar

 NOTA: Asegúrate de que las variables SUPABASE_* estén configuradas
para que la geolocalización y datos del archivo funcionen correctamente

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "destination": "/api/receive/$1"
     },
     {
-      "source": "/((?!api/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
